# AudioSocket

./: .gitignore  Buglist.md  CMakeLists.txt  README.md
include/: AudioSocket.h
src/: AudioDecoder.c  AudioEncoder.c  CMakeLists.txt
test/: AudioDecoder_file_test.c  AudioDecoder_test.c  AudioEncoder_test.c  CMakeLists.txt
